test/ddc-spec/error/01-ErrorExp/45-CaseTooManyBinders/Main.ds

module Main where

data Foo where
        Foo : Nat# -> Foo


foo (x: Foo)
 = case foo of
        Foo x y         -> x + y

